--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,42 +4,50 @@
 #
 #    pip-compile requirements-dev.in
 #
+anyio==3.6.1
+    # via watchfiles
 asgiref==3.5.2
     # via
     #   -c requirements.txt
     #   django
-astroid==2.11.5
+astroid==2.11.7
     # via pylint
-asttokens==2.0.5
+asttokens==2.0.7
     # via stack-data
-autopep8==1.6.0
+autopep8==1.7.0
     # via -r requirements-dev.in
 backcall==0.2.0
     # via ipython
+build==0.8.0
+    # via pip-tools
 click==8.1.3
     # via
     #   -c requirements.txt
     #   pip-tools
 decorator==5.1.1
     # via ipython
-dill==0.3.4
+dill==0.3.5.1
     # via pylint
 django==3.2.13
     # via
     #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
-django-stubs==1.10.1
+django-stubs==1.12.0
     # via -r requirements-dev.in
-django-stubs-ext==0.4.0
+django-stubs-ext==0.5.0
     # via django-stubs
-executing==0.8.3
+executing==0.9.1
     # via stack-data
-flake8==4.0.1
+flake8==5.0.4
     # via -r requirements-dev.in
 graphene-stubs==0.15
     # via -r requirements-dev.in
-ipython==8.3.0
+idna==3.3
+    # via
+    #   -c requirements.txt
+    #   anyio
+ipython==8.4.0
     # via -r requirements-dev.in
 isort==5.10.1
     # via
@@ -51,26 +59,30 @@ lazy-object-proxy==1.7.1
     # via astroid
 matplotlib-inline==0.1.3
     # via ipython
-mccabe==0.6.1
+mccabe==0.7.0
     # via
     #   flake8
     #   pylint
-mypy==0.942
+mypy==0.971
     # via
     #   -r requirements-dev.in
     #   django-stubs
     #   graphene-stubs
 mypy-extensions==0.4.3
     # via mypy
+packaging==21.3
+    # via
+    #   -c requirements.txt
+    #   build
 parso==0.8.3
     # via jedi
-pep517==0.12.0
-    # via pip-tools
+pep517==0.13.0
+    # via build
 pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.6.1
+pip-tools==6.8.0
     # via -r requirements-dev.in
 platformdirs==2.5.2
     # via pylint
@@ -82,17 +94,17 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pycodestyle==2.8.0
+pycodestyle==2.9.1
     # via
     #   autopep8
     #   flake8
-pyflakes==2.4.0
+pyflakes==2.5.0
     # via flake8
 pygments==2.12.0
     # via
     #   -c requirements.txt
     #   ipython
-pylint==2.13.9
+pylint==2.14.5
     # via
     #   -r requirements-dev.in
     #   pylint-django
@@ -101,6 +113,10 @@ pylint-django==2.5.3
     # via -r requirements-dev.in
 pylint-plugin-utils==0.7
     # via pylint-django
+pyparsing==3.0.9
+    # via
+    #   -c requirements.txt
+    #   packaging
 pytz==2022.1
     # via
     #   -c requirements.txt
@@ -111,28 +127,33 @@ six==1.16.0
     # via
     #   -c requirements.txt
     #   asttokens
+sniffio==1.2.0
+    # via anyio
 sqlparse==0.4.2
     # via
     #   -c requirements.txt
     #   django
-stack-data==0.2.0
+stack-data==0.3.0
     # via ipython
 toml==0.10.2
     # via autopep8
 tomli==2.0.1
     # via
     #   -c requirements.txt
+    #   build
     #   django-stubs
     #   mypy
     #   pep517
     #   pylint
-traitlets==5.2.1.post0
+tomlkit==0.11.3
+    # via pylint
+traitlets==5.3.0
     # via
     #   ipython
     #   matplotlib-inline
-types-pytz==2021.3.8
+types-pytz==2022.1.2
     # via django-stubs
-types-pyyaml==6.0.7
+types-pyyaml==6.0.11
     # via django-stubs
 typing-extensions==4.2.0
     # via
@@ -141,6 +162,8 @@ typing-extensions==4.2.0
     #   django-stubs-ext
     #   graphene-stubs
     #   mypy
+watchfiles==0.16.1
+    # via -r requirements-dev.in
 wcwidth==0.2.5
     # via
     #   -c requirements.txt
